Tooltip: Only highlight blocks that are marked BlockCodeLanguage

BUG: 492076
(cherry picked from commit 39d7e06a6d571426202eeaec80ddfd085b784f39)